# litestl

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Readme.MD  TODO.md  update-toc.sh
binding/: CMakeLists.txt  binding.cc  binding.h  binding_base.h  binding_bind.h  binding_constructor.h  binding_constructor_builder.h  binding_enum.h  binding_literal.h  binding_method.h  binding_method_builder.h  binding_number.h  binding_struct.h  binding_template.h  binding_types.h  binding_union.h  binding_utils.h  manager.h
binding/generators/: CMakeLists.txt  python.cc  python.h  typescript.cc  typescript.h
binding/typescriptRuntime/: AGENTS.md  bind.ts  binding.ts  boundVector.ts  index.ts  manager.ts  package.json  setValue.ts  specials.ts  string.ts  termColor.ts  typeSymbol.ts  utils.ts  vector.ts  wasmBase.ts  wasmInterface.ts
build_files/: macros.cmake
documentation/: binding.md  containers.md
io/: CMakeLists.txt  binfile.h  compress.cc  compress.h  serial.h
math/: CMakeLists.txt  aabb.h  bspline.h  geom.h  lut.h  math_bindings.h  matrix.h  mix.h  quat.h  tri_aabb_isect.h  vector.h
nodeTest/: nodeTest.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
path/: CMakeLists.txt  path.h
platform/: CMakeLists.txt  common.cc  cpu.h  debug_win32.cc  linux.cc  platform.h  time.h  wasm.cc  win32.cc
tests/: CMakeLists.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  snapshotManager.ts  termColor.js  termColor.ts  testUtils.h  test_binding_constructor.cc  test_binding_method.cc  test_binding_system.cc  test_binding_system.path.txt  test_binding_system.ts  test_binding_system__snapshots.json  test_binfile.cc  test_function.cc  test_map.cc  test_matrix.cc  test_pool.cc  test_print_stack_trace.cc  test_set.cc  test_string.cc  test_task.cc  test_util.h  test_vector.cc  tsconfig.json
tests/ts/: float3.ts  index.ts
tests/ts/litestl/math/: float3.ts
tests/ts/litestl/util/: String.ts  Vector.ts
tests/ts/test/: Foo.ts  VecTest.ts
util/: CMakeLists.txt  alloc.cc  alloc.h  array.h  assert.h  boolvector.h  callback_list.h  compiler_util.h  concepts.h  error.h  function.h  hash.h  hashtable_sizes.h  index_range.h  map.h  memory.h  ordered_set.h  pool.h  rand.h  set.h  span.h  string.cc  string.h  task.cc  task.h  time.h  type_tags.h  vector.h
